--- a/Projects/project2.html
+++ b/Projects/project2.html
@@ -9,14 +9,14 @@
 		<title>Strata by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="/assets/css/pages.css" />
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="/images/avatar.jpg" alt="" /></a>
 					<h1> <strong>Jonathan ROBILLARD</strong><br />
 					Informaticien </br>	
 					27 ans<br />
@@ -30,7 +30,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Bonjour et bienvenue à mon site de portfolio !<br /></h2>
+							<h2>PROJET 2<br /></h2>
 						</header>
 						<p>Je m'appelle Jonathan, je suis bilingue et je suis actuellement à la recherche d'une poste où je peux mettre en oeuvre mes compétences de programmation et développement de logiciels.</p>
 						<p>Lors de ma formation de Bachelors aux Etats-Unis j'ai suivi quelques cours d'informatique, mais mon aventure dans le monde de l'informatique a vraiment démarrée il y a 2 ans quand j'ai réussi mon BTS SIO ici en France. </p>
@@ -42,13 +42,8 @@
 						<h2>Mes projets</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a id="project1" href="Projects/project1.html" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="project1.html" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Projet 1</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="Projects/project2.html" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Projet 2</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 						<!--	<article class="col-6 col-12-xsmall work-item">
@@ -428,12 +423,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="/assets/js/jquery.min.js"></script>
+			<script src="/assets/js/jquery.poptrox.min.js"></script>
+			<script src="/assets/js/browser.min.js"></script>
+			<script src="/assets/js/breakpoints.min.js"></script>
+			<script src="/assets/js/util.js"></script>
+			<script src="/assets/js/main.js"></script>
 
 	</body>
 </html>
