renamed:    Projects/project1.html -> project1.html

--- a/project1.html
+++ b/project1.html
@@ -8,9 +8,9 @@
 	<head>
 		<title>Strata by HTML5 UP</title>
 		<meta charset="utf-8" />
-		<link rel="stylesheet" href="/assets/css/pages.css" />
-		<script src="/assets/js/jquery.min.js"></script>
-		<script src="/assets/js/parallax.min.js"></script>
+		<link rel="stylesheet" href="assets/css/pages.css" />
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/parallax.min.js"></script>
 	</head>
 	<body>
 		<header class="parallax" data-parallax="scroll" data-image-src="/images/bg.jpg" data-z-index="";>
