modified:   project1.html

--- a/project1.html
+++ b/project1.html
@@ -13,7 +13,7 @@
 		<script src="assets/js/parallax.min.js"></script>
 	</head>
 	<body>
-		<header class="parallax" data-parallax="scroll" data-image-src="/images/bg.jpg" data-z-index="";>
+		<header class="parallax" data-parallax="scroll" data-image-src="images/bg.jpg" data-z-index="";>
 			</header>
 			<div class="container">
 			<p>Je m'appelle Jonathan, je suis bilingue et je suis actuellement à la recherche d'une poste où je peux mettre en oeuvre mes compétences de programmation et développement de logiciels.</p>
