modified:   index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<h2>Mes projets</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a id="project1" href="Projects/project1.html" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a id="project1" href="project1.html" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Projet 1</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
