--- a/project1.html
+++ b/project1.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Poop design</title>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="assets/css/pages.css" />
 		<script src="assets/js/jquery.min.js"></script>
