modified:   assets/css/main2.css 	modified:   indexv2.html

--- a/indexv2.html
+++ b/indexv2.html
@@ -3,6 +3,9 @@
 
   <head>
     <meta charset="UTF-8">
+    <!-- if you dont put viewport here iphone and company 
+        wont take into account all the hardwork you did on your css-->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>
       Responsive Header Demo
     </title>
@@ -44,11 +47,24 @@
         <div class="divText">
             <h2 class="contentH2">Bonjour et bienvenue à mon portfolio !</h2>
             <div id="content1">
-                <p>Je m'appelle Jonathan, je suis bilingue et je suis actuellement à la recherche d'une poste où je peux mettre en oeuvre mes compétences de programmation et développement de logiciels.</p>
-                <p>Lors de ma formation de Bachelors aux Etats-Unis j'ai suivi quelques cours d'informatique, mais mon aventure dans le monde de l'informatique a vraiment démarrée il y a 2 ans quand j'ai réussi mon BTS SIO ici en France. </p>
-                <p>A travers mes expériences professionnelles ces 2 dernières années, j'ai commencé à m'orienter de plus en plus vers le monde du développement de logiciels. Ceci est dû surtout à ma position actuelle en tant que gestionnaire chez GRDF au cœur de sa récemment inaugurée "agence de la qualité de la mesure". Par suite de mon intégration dans cette nouvelle équipe, j'ai pu toucher à pléthore de technologies différentes ainsi que cultiver un goût pour des compétences techniques en développement que je n'avais jamais cru possible de comprendre avant. Grâce à ces nouvelles compétences, j'ai pu mettre en place et maintenir plusieurs solutions d'automatisation et pilotage au sein de GRDF. </p> 
+                <p>Je m'appelle Jonathan, je suis bilingue et je suis actuellement
+                     à la recherche d'une poste où je peux mettre en oeuvre mes compétences 
+                     de programmation et développement de logiciels.</p></br>
+                <p>Lors de ma formation de Bachelors aux Etats-Unis j'ai suivi quelques 
+                    cours d'informatique, mais mon aventure dans le monde de l'informatique
+                     a vraiment démarrée il y a 2 ans quand j'ai réussi mon BTS SIO ici en
+                      France. </p></br>
+                <p>A travers mes expériences professionnelles ces 2 dernières années,
+                     j'ai commencé à m'orienter de plus en plus vers le monde 
+                     du développement de logiciels. Ceci est dû surtout à ma position 
+                     actuelle en tant que gestionnaire chez GRDF au cœur de sa récemment
+                      inaugurée "agence de la qualité de la mesure".</p> </br> <p>Par suite de mon 
+                      intégration dans cette nouvelle équipe, j'ai pu toucher à pléthore
+                       de technologies différentes ainsi que cultiver un goût pour des 
+                       compétences techniques en développement que je n'avais jamais cru possible de comprendre avant. Grâce à ces nouvelles compétences, j'ai pu mettre en place et maintenir plusieurs solutions d'automatisation et pilotage au sein de GRDF. </p> 
         </div>
-            <div id="content1">Content 2</div>
+        <!--     
+        <div id="content1">Content 2</div>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, aut? Reprehenderit ullam sequi illo earum culpa! Nisi voluptates dolore placeat, nam, ullam ut amet magni aperiam corrupti nihil quasi asperiores.</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, aut? Reprehenderit ullam sequi illo earum culpa! Nisi voluptates dolore placeat, nam, ullam ut amet magni aperiam corrupti nihil quasi asperiores.</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, aut? Reprehenderit ullam sequi illo earum culpa! Nisi voluptates dolore placeat, nam, ullam ut amet magni aperiam corrupti nihil quasi asperiores.</p>
@@ -59,6 +75,7 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, aut? Reprehenderit ullam sequi illo earum culpa! Nisi voluptates dolore placeat, nam, ullam ut amet magni aperiam corrupti nihil quasi asperiores.</p>
 
             <div id="content1">Content 3</div>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, aut? Reprehenderit ullam sequi illo earum culpa! Nisi voluptates dolore placeat, nam, ullam ut amet magni aperiam corrupti nihil quasi asperiores.</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, aut? Reprehenderit ullam sequi illo earum culpa! Nisi voluptates dolore placeat, nam, ullam ut amet magni aperiam corrupti nihil quasi asperiores.</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, aut? Reprehenderit ullam sequi illo earum culpa! Nisi voluptates dolore placeat, nam, ullam ut amet magni aperiam corrupti nihil quasi asperiores.</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, aut? Reprehenderit ullam sequi illo earum culpa! Nisi voluptates dolore placeat, nam, ullam ut amet magni aperiam corrupti nihil quasi asperiores.</p>
@@ -66,7 +83,7 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, aut? Reprehenderit ullam sequi illo earum culpa! Nisi voluptates dolore placeat, nam, ullam ut amet magni aperiam corrupti nihil quasi asperiores.</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, aut? Reprehenderit ullam sequi illo earum culpa! Nisi voluptates dolore placeat, nam, ullam ut amet magni aperiam corrupti nihil quasi asperiores.</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, aut? Reprehenderit ullam sequi illo earum culpa! Nisi voluptates dolore placeat, nam, ullam ut amet magni aperiam corrupti nihil quasi asperiores.</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, aut? Reprehenderit ullam sequi illo earum culpa! Nisi voluptates dolore placeat, nam, ullam ut amet magni aperiam corrupti nihil quasi asperiores.</p>
+        -->
             <div class="gridDiv2">
                 <div id="content2">Content 4</div>
                 <div id="content2">Content 5</div>
@@ -81,7 +98,7 @@
     
         <div class="footerDiv">
             <footer>
-                Footer
+                Jonathan Robillard | avril 2020
             </footer>
         </div>
 
