modified:   assets/css/main.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
     
         <div class="footerDiv">
             <footer>
-                Jonathan Robillard | avril 2020
+                <span>Jonathan Robillard</span> 
+                <span> avril 2020 </span>
             </footer>
         </div>
 
