modified:   index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         wont take into account all the hardwork you did on your css-->
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>
-      Responsive Header Demo
+    Portfolio
     </title>
     <link rel="stylesheet" href="assets/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
