modified:   assets/css/main.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -26,21 +26,28 @@
     </nav>
     <div id="headerDiv">
         <div id="pageTitle"> Jonathan Robillard </br> <p id="poste">Développeur</p>
-            <!-- <header class="newHeader">Accueil</header> -->
-              <!-- this is for the mobile version only
+                    <!-- <header class="newHeader">Accueil</header> -->
+                    <!-- this is for the mobile version only
                    <img src="images/hamburgerv2.png" alt="">-->
-
                    <div id="navWrapperDesktop">
      
                     <span id="accueilHeaderDT">
                         <a  href="index.html">Accueil</a>
                     </span>
-                    <span>   
-                        <a class="allProjects" href="allProjects.html">Projets</a>
-                    </span>
+                    <div id="accueilHeaderDT2">
+                        <p>Projets</p>
+                        <div class="allProjectsContent">
+                            <a href="allProjects.html">Tous</a>
+                            <a href="csharp.html">C#</a>
+                            <a href="vba.html">VBA</a>
+                            <a href="powershell.html">Powershell</a>
+                            <a href="webdev.html">Dévelopement Web</a>
+                        </div>
+                    </div>           
+                 </div>
                 </div>
-
          </div>
+         <div id="emailWrapper"><p>jonrsample@gmail.com</p></div>
     </div>
 
     <main>
