modified:   assets/css/main.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <nav id="navWrapperMobile">
      
-        <span class="accueilHeader">
+        <span id="accueilHdrMobile">
             <a  href="index.html">Accueil</a>
         </span>
         <span>   
