modified:   assets/css/hamburgers.css 	modified:   assets/css/main.css 	modified:   assets/js/hamburger.js 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -20,16 +20,25 @@
             <span class="hamburger-box">
               <span class="hamburger-inner"></span>
             </span>
-          </button>  
+          </button>
+          <div id="allProjectsContent">
+            <span id="menuPlaceholder"></span>
+            <a id ="homeLink" href="index.html">Accueil</a>
+            <div id="projectsSMWrapper">
+               <span id="projSpan"><a href="#">Projets</a><strong>+</strong></span>
+                <div id="projectsSubMenu">
+                    <a href="csharp.html"><strong>></strong>C#</a>
+                    <a href="vba.html"><strong>></strong>VBA</a>
+                    <a href="powershell.html"><strong>></strong>Powershell</a>
+                    <a href="webdev.html"><strong>></strong>Dévelopement Web</a>
+                </div>
+            </div>
+        </div>  
         </nav>
 
     <div id="headerDiv">
         <div id="pageTitle"> Jonathan Robillard </br> <p id="poste">Développeur</p>
-                    <!-- <header class="newHeader">Accueil</header> -->
-                    <!-- this is for the mobile version only
-                   <img src="images/hamburgerv2.png" alt="">-->
                    <div id="navWrapperDesktop">
-     
                     <span id="accueilHeaderDT">
                         <a  href="index.html">Accueil</a>
                     </span>
@@ -69,25 +78,7 @@
                        de technologies différentes ainsi que cultiver un goût pour des 
                        compétences techniques en développement que je n'avais jamais cru possible de comprendre avant. Grâce à ces nouvelles compétences, j'ai pu mettre en place et maintenir plusieurs solutions d'automatisation et pilotage au sein de GRDF. </p> 
             </div>
-          <!--
-            <div class="gridDiv2">
-                <div class="borderGDiv">
-                    <p id="content2" >Voir tous mes projets</p>
-                </div>
-                <div class="borderGDiv">
-                    <p id="content2">C#</p>
-                </div>
-                <div class="borderGDiv">
-                    <p id="content2">Excel / VBA</p>
-                </div>
-                <div class="borderGDiv">
-                    <p id="content2">Powershell</p>
-                </div>
-            </div>
-
-        -->
         </div>
-   
     
         <div class="footerDiv">
             <footer>
