modified:   assets/css/main.css 	modified:   assets/js/hamburger.js 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <div id="projectsSMWrapper">
                <span id="projSpan"><a href="#">Projets</a><strong>+</strong></span>
                 <div id="projectsSubMenu">
-                    <a href="csharp.html"><strong>></strong>C#</a>
-                    <a href="vba.html"><strong>></strong>VBA</a>
-                    <a href="powershell.html"><strong>></strong>Powershell</a>
-                    <a href="webdev.html"><strong>></strong>Dévelopement Web</a>
+                    <a class = "linkMenuItems" href="csharp.html"><strong>>   </strong><span class="subMenuItems">C#</span></a>
+                    <a class = "linkMenuItems" href="vba.html"><strong>>   </strong><span class="subMenuItems">VBA</span></a>
+                    <a class = "linkMenuItems" href="powershell.html"><strong>>   </strong><span class="subMenuItems">Powershell</span></a>
+                    <a class = "linkMenuItems"href="webdev.html"><strong>>   </strong><span class="subMenuItems">Dévelopement Web</span></a>
                 </div>
             </div>
         </div>  
